# adgm-cases

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
adgm_cases/: requirements.txt
adgm_cases/app/: agents.py  constants.py  document_processor.py  general_inference.py  image_transcriber.py  main.py  main_stream.py
adgm_cases/app/tools/: tools_helpers.py
adgm_cases/forms/: form_claim.json  form_employment.json
adgm_cases/templates/: claim_json_schema.py  employment_json_schema.py  prompt_templates.py  schemas.py
adgm_cases/utils/: helpers.py  utils.py
