[tool.poetry]
name = "rag-meter"
version = "0.0.1"
description = "Automation"
authors = ["marwan-elghitany-cntxt <marwan.elghitany@cntxt.tech>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/marwan-elghitany-cntxt/adgm-cases"
packages = [{ include = "adgm_cases" }]
include = ["README.md", "LICENSE"]


[tool.poetry.dependencies]
python = "^3.10"
asyncio = { version = "*", optional = true }
openai = "^1.67.0"
langchain = "^0.3.21"
langgraph = "^0.3.6"
streamlit = "^1.43.2"
loguru = "^0.7.2"

[tool.poetry.scripts]
rag-meter = "rag_meter.cli.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"